--- a/app/globals.css
+++ b/app/globals.css
@@ -57,14 +57,14 @@ small {font-size: 0.750rem; /* 12px */}
 .input__container {
   position: relative;
   background: rgba(255, 255, 255, 0.664);
-  padding: 16px 20px;
+  padding: 8px 30px;
   display: flex;
-  scale: 1.3;
+  scale: 1.1;
   justify-content: center;
   align-items: center;
   gap: 5px;
   border-radius: 22px;
-  max-width: 600px;
+  max-width: 700px;
   transition: transform 400ms;
   transform-style: preserve-3d;
  
@@ -111,9 +111,8 @@ small {font-size: 0.750rem; /* 12px */}
 
 .input__search {
   width: 200vh;
-  background: rgba(255, 255, 255, 0.664);
-  outline: none;
-  border: none;
+  filter: blur(0.2px);
+border: none;
   scale: 1;
   padding: 8px;
   position: relative;
